Some fixes for hamburger manu, test commit after public visibility

--- a/rooms/style.css
+++ b/rooms/style.css
@@ -565,6 +565,10 @@ body {
         padding: 10px 40px;
     }
 
+    .header__checkbox {
+        opacity: 0;
+    }
+
     /* Show the hamburger menu */
     .header__checkbox, .check-wrapper {
         display: block;
